# ComputerGraphics_Assignment

./: README.md
Fase1/Engine/: CMakeLists.txt  main.cpp  point.h
Fase1/Generated_Models/: box.3d  cone.3d  plane.3d  sphere.3d
Fase1/Generator/: box.h  cone.h  generator.cpp  plane.h  point.h  sphere.h
Fase1/Report/: report.tex
Fase1/Scenes/: scene.xml
Fase2/Engine/: CMakeLists.txt  figure.h  geometry.h  main.cpp  parser.cpp  parser.h  rotation.h  scale.h  translation.h
Fase2/Generated_Models/: asteroid.3d  asteroids_elucidativo.xml  box.3d  cone.3d  moon_real.3d  planet_real.3d  sphere.3d  torus.3d  torus_real.3d
Fase2/Generator/: CMakeLists.txt  asteroids.cpp  box.h  cone.cpp  figures.h  generator.cpp  plane.cpp  sphere.cpp  torus.cpp  writeFile.cpp  writeFile.h
Fase2/Report/: report.tex  tree_struct.drawio
Fase2/Scenes/: scene.xml  scene_elucidativa.xml  scene_real.xml  solar_system.xml
Fase3/Engine/: geometry.h  main.cpp  parser.cpp
Fase3/Fase3/Engine/: CMakeLists.txt  geometry.h  parser.h
Fase3/Fase3/Generator/: CMakeLists.txt  box.cpp
Fase3/Generated_Models/: cometa.3d  cometa.patch  moon_elucidativo.3d  planet.3d  torus.3d
Fase3/Generator/: bezierSurface.cpp  figures.h  generator.cpp
Fase3/Report/: report.tex
Fase3/Scenes/: scene.xml  scene_elucidativa.xml
Fase4/Engine/: CMakeCache.txt  CMakeLists.txt  Engine  Makefile  cmake_install.cmake  geometry.h  main.cpp  parser.cpp
Fase4/Generated_Models/: cometa.3d  moon.3d  planet.3d  torus.3d
Fase4/Generator/: CMakeCache.txt  Generator  Makefile  bezierSurface.cpp  cmake_install.cmake  figures.h  sphere.cpp  torus.cpp  writeFile.cpp
Fase4/Report/: report.aux  report.tex  report.toc
Fase4/Scenes/: scene.xml
